<resources>
    <string name="app_name">EatIt Server</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="your_name">Your Name</string>
    <string name="menu_category">Category</string>
    <string name="category_name">Category Name</string>
    <string name="menu_food_list">Food List</string>
    <string name="food_price">Food Price</string>
    <string name="food_name">Food Name</string>
    <string name="food_description">Food Description</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="addon_size_price">Addon/Size Price</string>
    <string name="addon_size_name">Addon/Size Name</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="size_name">Size Name</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="menu_orders">Orders</string>
    <string name="action_filter">Filter</string>
    <string name="placed">Placed</string>
    <string name="shipping">Shipping</string>
    <string name="shipped">Shipped</string>
    <string name="cancelled">Cancelled</string>
    <string name="update_order">Update Order</string>
    <string name="update_order_status">Update Order Status</string>
    <string name="restore_placed">Restore Placed</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="menu_shipper">Shipper</string>
</resources>
