<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="@dimen/eight_dp"
    android:paddingRight="24dp"
    android:paddingBottom="@dimen/eight_dp">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/update_order"
        android:textColor="@android:color/black"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/txt_title_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title"
        android:fontFamily="@font/brandon_medium"
        android:text="@string/update_order_status"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_title_small"
        android:fontFamily="@font/brandon_medium"
        tools:text="Status: PLaced"
        android:textColor="@android:color/darker_gray"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/rdi_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_status"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rdi_shipping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/shipping"
            android:textSize="22sp" />

        <RadioButton
            android:id="@+id/rdi_cancelled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cancelled"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="22sp" />

    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_button"
        android:layout_below="@id/rdi_group"
        android:scrollbars="none">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="shipper list"
            android:textSize="200sp" />

    </ScrollView>

    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/twenty_dp"
        android:gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="@dimen/eight_dp"
            android:text="@string/cancel"
            android:textColor="@android:color/darker_gray"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingBottom="@dimen/eight_dp"
            android:text="@string/ok"
            android:textColor="@android:color/holo_red_dark"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</RelativeLayout>