<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingTop="@dimen/eight_dp"
    android:paddingBottom="@dimen/eight_dp">

    <LinearLayout
        android:id="@+id/placed_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingTop="@dimen/twenty_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingBottom="@dimen/twenty_dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_baseline_speaker_notes_black"
            android:tint="#737373" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/placed"
            android:textColor="#737373"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/shipping_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingTop="@dimen/twenty_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingBottom="@dimen/twenty_dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_baseline_local_shipping_black"
            android:tint="#737373" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/shipping"
            android:textColor="#737373"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/shipped_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingTop="@dimen/twenty_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingBottom="@dimen/twenty_dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_baseline_done_24"
            android:tint="#737373" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/shipped"
            android:textColor="#737373"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_marginLeft="@dimen/eight_dp"
        android:layout_marginRight="@dimen/eight_dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/cancelled_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/eight_dp"
        android:paddingTop="@dimen/twenty_dp"
        android:paddingRight="@dimen/eight_dp"
        android:paddingBottom="@dimen/twenty_dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="32dp"
            android:src="@drawable/ic_baseline_cancel_presentation_24"
            android:tint="#737373" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/brandon_medium"
            android:text="@string/cancelled"
            android:textColor="#737373"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>